Add support for including/excluding via substrings
OVERVIEW

Support is provided for filtering via Alarm `Name` or `Description`
strings, either 1:1 or partial (aka, "substring") matches.

Explicit exclusions take priority over either implicit or explicit
inclusions.

Scenario:

- 4 Triggered Alarms for datastore usage
- 1 Triggered Alarm for virtual machine memory usage
- 1 Triggered Alarm for virtual machine cpu usage
- sysadmin explicitly includes `VirtualMachine` entity types
- sysadmin explicitly excludes virtual machine cpu usage

Result: 1 Triggered Alarm is reported.

NOTE

- Documentation will need further review passes before it can be
  considered stable. Detailed review is pending further near-future
  feature changes before the next release.

CHANGES

- contrib file updates
- documentation updates (further work pending)
- add new filtering functionality specific to Alarm `Name` and
  `Description` fields via literal and substring matches
- BUGFIXES
  - refinement and correction of filtering logic
  - correction of logging details regarding pre/post filtering results
  - handling of default case for Nagios state label and exit status
    code when all alarms are filtered out
- API surface expanded to cover filtering operations in a simplified
  way (one-shot method) and via individual include/exclude filtering
  calls
- Add test code and cases to assert that filtering functionality works
  as expected

refs GH-231

--- a/contrib/nagios/etc/nagios-plugins/config/vmware-alarms.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-alarms.cfg
@@ -12,37 +12,37 @@
 ############################################################################
 
 
-# Look at triggered alarms for all managed object types (e.g., Datastore
-# and VirtualMachine) only, across all detected datacenters, do not evaluate
-# any triggered alarms which have been previously acknowledged.
+# Look at triggered alarms for all managed object types (e.g., Datastore and
+# VirtualMachine), across all detected datacenters, do not evaluate any
+# triggered alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --trust-cert --log-level info
     }
 
 # Look at triggered alarms for all managed object types (e.g., Datastore and
-# VirtualMachine) only, across all detected datacenters AND evaluate any
-# triggered alarms which have been previously acknowledged.
+# VirtualMachine), across all detected datacenters AND evaluate any triggered
+# alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_eval_acknowledged
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4' --eval-acknowledged --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4$' --eval-acknowledged --trust-cert --log-level info
     }
 
 # Look at triggered alarms for specified managed object types (e.g., Datastore
-# and VirtualMachine) only, across all detected datacenters, do not evaluate
-# any triggered alarms which have been previously acknowledged.
+# and VirtualMachine), across all detected datacenters, do not evaluate any
+# triggered alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_include_types
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4' --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4$' --trust-cert --log-level info
     }
 
 # Look at triggered alarms for specified managed object types (e.g., Datastore
-# and VirtualMachine) only, across all detected datacenters AND also evaluate
-# any triggered alarms which have
-# been previously acknowledged, but not yet resolved.
+# and VirtualMachine), across all detected datacenters AND also evaluate any
+# triggered alarms which have been previously acknowledged, but not yet
+# resolved.
 define command{
     command_name    check_vmware_alarms_include_types_eval_acknowledged
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4' --eval-acknowledged --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4$' --eval-acknowledged --trust-cert --log-level info
     }
 
 # Look at triggered alarms associated with managed objects which do not match
@@ -51,7 +51,7 @@ define command{
 # triggered alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_exclude_types
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4' --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4$' --trust-cert --log-level info
     }
 
 # Look at triggered alarms associated with managed objects which do not match
@@ -61,10 +61,80 @@ define command{
 # resolved.
 define command{
     command_name    check_vmware_alarms_exclude_types_eval_acknowledged
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4' --eval-acknowledged --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4$' --eval-acknowledged --trust-cert --log-level info
     }
 
+# Look at triggered alarms whose name matches the specified list of alarm name
+# substrings (e.g., "datastore usage on disk"), across all detected
+# datacenters, do not evaluate any triggered alarms which have been previously
+# acknowledged.
+define command{
+    command_name    check_vmware_alarms_include_names
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-name '$ARG4$' --trust-cert --log-level info
+    }
 
+# Look at triggered alarms whose name matches the specified list of alarm name
+# substrings (e.g., "datastore usage on disk"), across all detected
+# datacenters AND also evaluate any triggered alarms which have been
+# previously acknowledged, but not yet resolved.
+define command{
+    command_name    check_vmware_alarms_include_names_eval_acknowledged
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-name '$ARG4$' --eval-acknowledged --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose name does not match the specified list of
+# alarm name substrings (e.g., "datastore usage on disk") across all detected
+# datacenters, do not evaluate any triggered alarms which have been previously
+# acknowledged.
+define command{
+    command_name    check_vmware_alarms_exclude_names
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-name '$ARG4$' --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose name does not match the specified list of
+# alarm name substrings (e.g., "datastore usage on disk") across all detected
+# datacenters AND also evaluate any triggered alarms which have been
+# previously acknowledged, but not yet resolved.
+define command{
+    command_name    check_vmware_alarms_exclude_names_eval_acknowledged
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-name '$ARG4$' --eval-acknowledged --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose description matches the specified list of
+# alarm description substrings (e.g., "monitor datastore disk usage"), across
+# all detected datacenters, do not evaluate any triggered alarms which have
+# been previously acknowledged.
+define command{
+    command_name    check_vmware_alarms_include_descs
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-desc '$ARG4$' --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose description matches the specified list of
+# alarm description substrings (e.g., "monitor datastore disk usage"), across
+# all detected datacenters AND also evaluate any triggered alarms which have
+# been previously acknowledged, but not yet resolved.
+define command{
+    command_name    check_vmware_alarms_include_descs_eval_acknowledged
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-desc '$ARG4$' --eval-acknowledged --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose description does not match the specified list
+# of alarm description substrings (e.g., "monitor datastore disk usage")
+# across all detected datacenters, do not evaluate any triggered alarms which
+# have been previously acknowledged.
+define command{
+    command_name    check_vmware_alarms_exclude_descs
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-desc '$ARG4$' --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose description does not match the specified list
+# of alarm description substrings (e.g., "monitor datastore disk usage")
+# across all detected datacenters AND also evaluate any triggered alarms which
+# have been previously acknowledged, but not yet resolved.
+define command{
+    command_name    check_vmware_alarms_exclude_descs_eval_acknowledged
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-desc '$ARG4$' --eval-acknowledged --trust-cert --log-level info
+    }
 
 
 ############################################################################
@@ -72,52 +142,123 @@ define command{
 ############################################################################
 
 # Look at triggered alarms for all managed object types (e.g., Datastore and
-# VirtualMachine) only, within specified datacenters only. Do not evaluate any
-# triggered alarms which have been previously acknowledged.
+# VirtualMachine), within specified datacenters. Do not evaluate any triggered
+# alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_specific_dc
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --dc-name '$ARG4$' --trust-cert --log-level info
     }
 
 # Look at triggered alarms for all managed object types (e.g., Datastore and
-# VirtualMachine) only, within specified datacenters only. Evaluate any
-# triggered alarms which have been previously acknowledged.
+# VirtualMachine), within specified datacenters. Evaluate any triggered alarms
+# which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_specific_dc_eval_acknowledged
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --dc-name '$ARG4$' --eval-acknowledged --trust-cert --log-level info
     }
 
 # Look at triggered alarms for specified managed object types (e.g., Datastore
-# and VirtualMachine) only, within specified datacenters only. Do not evaluate
-# any triggered alarms which have been previously acknowledged.
+# and VirtualMachine), within specified datacenters. Do not evaluate any
+# triggered alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_specific_dc_include_types
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4' --dc-name '$ARG5$' --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4$' --dc-name '$ARG5$' --trust-cert --log-level info
     }
 
 # Look at triggered alarms for specified managed object types (e.g., Datastore
-# and VirtualMachine) only, within specified datacenters only. Evaluate any
-# triggered alarms which have been previously acknowledged, but not yet
-# resolved.
-define command{
-    command_name    check_vmware_alarms_specific_dc_include_types_eval_acknowledged
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
-    }
-
-# Look at triggered alarms associated with managed objects which do not match
-# the specified list of managed object types (e.g., Datastore and
-# VirtualMachine) within specified datacenters only. Do not evaluate any
-# triggered alarms which have been previously acknowledged.
-define command{
-    command_name    check_vmware_alarms_specific_dc_exclude_types
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4' --dc-name '$ARG5$' --trust-cert --log-level info
-    }
-
-# Look at triggered alarms associated with managed objects which do not match
-# the specified list of managed object types (e.g., Datastore and
-# VirtualMachine) within specified datacenters only. Evaluate any triggered
+# and VirtualMachine), within specified datacenters. Evaluate any triggered
 # alarms which have been previously acknowledged, but not yet resolved.
 define command{
+    command_name    check_vmware_alarms_specific_dc_include_types_eval_acknowledged
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4$' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
+    }
+
+# Look at triggered alarms associated with managed objects which do not match
+# the specified list of managed object types (e.g., Datastore and
+# VirtualMachine) within specified datacenters. Do not evaluate any triggered
+# alarms which have been previously acknowledged.
+define command{
+    command_name    check_vmware_alarms_specific_dc_exclude_types
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4$' --dc-name '$ARG5$' --trust-cert --log-level info
+    }
+
+# Look at triggered alarms associated with managed objects which do not match
+# the specified list of managed object types (e.g., Datastore and
+# VirtualMachine) within specified datacenters. Evaluate any triggered alarms
+# which have been previously acknowledged, but not yet resolved.
+define command{
     command_name    check_vmware_alarms_specific_dc_exclude_types_eval_acknowledged
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4$' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose name matches the specified list of alarm name
+# substrings (e.g., "datastore usage on disk"), within specified datacenters,
+# fallback to default datacenter if not found. Do not evaluate any triggered
+# alarms which have been previously acknowledged.
+define command{
+    command_name    check_vmware_alarms_specific_dc_include_names
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-name '$ARG4$' --dc-name '$ARG5$' --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose name matches the specified list of alarm name
+# substrings (e.g., "datastore usage on disk"), within specified datacenters.
+# Evaluate any triggered alarms which have been previously acknowledged, but
+# not yet resolved.
+define command{
+    command_name    check_vmware_alarms_specific_dc_include_names_eval_acknowledged
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-name '$ARG4$' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose name does not match the specified list of
+# alarm name substrings (e.g., "datastore usage on disk"), within specified
+# datacenters. Do not evaluate any triggered alarms which have been previously
+# acknowledged.
+define command{
+    command_name    check_vmware_alarms_specific_dc_exclude_names
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-name '$ARG4$' --dc-name '$ARG5$' --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose name does not match the specified list of
+# alarm name substrings (e.g., "datastore usage on disk") wwithin specified
+# datacenters. Evaluate any triggered alarms which have been previously
+# acknowledged, but not yet resolved.
+define command{
+    command_name    check_vmware_alarms_specific_dc_exclude_names_eval_acknowledged
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-name '$ARG4$' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose description matches the specified list of
+# alarm description substrings (e.g., "monitor datastore disk usage"), within
+# specified datacenters, fallback to default datacenter if not found. Do not
+# evaluate any triggered alarms which have been previously acknowledged.
+define command{
+    command_name    check_vmware_alarms_specific_dc_include_descs
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-desc '$ARG4$' --dc-name '$ARG5$' --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose description matches the specified list of
+# alarm description substrings (e.g., "monitor datastore disk usage"), within
+# specified datacenters. Evaluate any triggered alarms which have been
+# previously acknowledged, but not yet resolved.
+define command{
+    command_name    check_vmware_alarms_specific_dc_include_descs_eval_acknowledged
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-desc '$ARG4$' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose description does not match the specified list
+# of alarm description substrings (e.g., "monitor datastore disk usage"),
+# within specified datacenters. Do not evaluate any triggered alarms which
+# have been previously acknowledged.
+define command{
+    command_name    check_vmware_alarms_specific_dc_exclude_descs
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-desc '$ARG4$' --dc-name '$ARG5$' --trust-cert --log-level info
+    }
+
+# Look at triggered alarms whose description does not match the specified list
+# of alarm description substrings (e.g., "monitor datastore disk usage")
+# wwithin specified datacenters. Evaluate any triggered alarms which have been
+# previously acknowledged, but not yet resolved.
+define command{
+    command_name    check_vmware_alarms_specific_dc_exclude_descs_eval_acknowledged
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-desc '$ARG4$' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
     }
