--- a/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
+++ b/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
@@ -378,3 +378,29 @@ define service{
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
     }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Triggered Alarms - Exclude datastore usage
+    servicegroups           vmware-checks, vmware-alarm-checks
+    check_command           check_vmware_alarms_exclude_names!example!vc1-read-only-service-account!$USER13$!"datastore usage on disk"
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Exclude Triggered Alarms whose names match the provided list of substrings
+
+    }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Triggered Alarms - Datastore usage only
+    servicegroups           vmware-checks, vmware-alarm-checks
+    check_command           check_vmware_alarms_include_names!example!vc1-read-only-service-account!$USER13$!"datastore usage on disk"
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Explicitly include Triggered Alarms whose names match the provided list of substrings (all others ignored)
+
+    }
