Add support for filtering via entity name
OVERVIEW

Support is provided for filtering via Triggered Alarm Entity Name
substrings.

Explicit exclusions take priority over either implicit or explicit
inclusions.

Scenario:

- 3 Triggered Alarms for datastore usage
  - 2 at `red` level
  - 1 at `yellow` level (entity name `RES-DC1-S6200-vol11`)
- 1 Triggered Alarm for virtual machine memory usage
  - at `red` level
- 1 Triggered Alarm for virtual machine cpu usage
  - at `red` level

Filters applied:

- sysadmin explicitly includes `VirtualMachine` entity type
- sysadmin explicitly includes `warning` (aka `yellow`) status
- sysadmin explicitly excludes `virtual machine cpu usage` Alarm Name substring
- sysadmin explicitly excludes `RES-DC1-S6200-vol11` entity name

Result: 1 Triggered Alarm is reported:

- 1 Triggered Alarm for virtual machine memory usage

NOTE

- Documentation updates have *not* been applied to cover this set of
  changes.

- Detailed review is pending further near-future feature changes
  to be included before the next release.

CHANGES

- Add new filtering functionality specific to Alarm entity name
  substrings
  - `--include-entity-name`
  - `--exclude-entity-name`
- BREAKING (only against `master` branch)
  - Rename flags for entity type to match new flags for entity name
    - `--include-type` to `--include-entity-type`
    - `--exclude-type` to `--exclude-entity-type`
- Expand debug logging
  - add missing "early exit" logging to filter methods
    - when triggered alarms list is empty
    - when explicit include and explicit exclude lists are empty
- Refactor `TriggeredAlarms.filterBySubstring()` method to accept
  one of several supported keywords
  - changes made to support comparisons against entity names in
    addition to existing support for alarm names and alarm
    descriptions
- Expand test code and cases to assert that new and existing
  filtering functionality works as expected

refs GH-220

--- a/contrib/nagios/etc/nagios-plugins/config/vmware-alarms.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-alarms.cfg
@@ -25,7 +25,7 @@ define command{
 # alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_eval_acknowledged
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4$' --eval-acknowledged --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-entity-type '$ARG4$' --eval-acknowledged --trust-cert --log-level info
     }
 
 # Look at triggered alarms for specified managed object types (e.g., Datastore
@@ -33,7 +33,7 @@ define command{
 # triggered alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_include_types
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4$' --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-entity-type '$ARG4$' --trust-cert --log-level info
     }
 
 # Look at triggered alarms for specified managed object types (e.g., Datastore
@@ -42,7 +42,7 @@ define command{
 # resolved.
 define command{
     command_name    check_vmware_alarms_include_types_eval_acknowledged
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4$' --eval-acknowledged --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-entity-type '$ARG4$' --eval-acknowledged --trust-cert --log-level info
     }
 
 # Look at triggered alarms associated with managed objects which do not match
@@ -51,7 +51,7 @@ define command{
 # triggered alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_exclude_types
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4$' --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-entity-type '$ARG4$' --trust-cert --log-level info
     }
 
 # Look at triggered alarms associated with managed objects which do not match
@@ -61,7 +61,7 @@ define command{
 # resolved.
 define command{
     command_name    check_vmware_alarms_exclude_types_eval_acknowledged
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4$' --eval-acknowledged --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-entity-type '$ARG4$' --eval-acknowledged --trust-cert --log-level info
     }
 
 # Look at triggered alarms whose name matches the specified list of alarm name
@@ -162,7 +162,7 @@ define command{
 # triggered alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_specific_dc_include_types
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4$' --dc-name '$ARG5$' --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-entity-type '$ARG4$' --dc-name '$ARG5$' --trust-cert --log-level info
     }
 
 # Look at triggered alarms for specified managed object types (e.g., Datastore
@@ -170,7 +170,7 @@ define command{
 # alarms which have been previously acknowledged, but not yet resolved.
 define command{
     command_name    check_vmware_alarms_specific_dc_include_types_eval_acknowledged
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4$' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-entity-type '$ARG4$' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
     }
 
 # Look at triggered alarms associated with managed objects which do not match
@@ -179,7 +179,7 @@ define command{
 # alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_specific_dc_exclude_types
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4$' --dc-name '$ARG5$' --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-entity-type '$ARG4$' --dc-name '$ARG5$' --trust-cert --log-level info
     }
 
 # Look at triggered alarms associated with managed objects which do not match
@@ -188,7 +188,7 @@ define command{
 # which have been previously acknowledged, but not yet resolved.
 define command{
     command_name    check_vmware_alarms_specific_dc_exclude_types_eval_acknowledged
-    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4$' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
+    command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-entity-type '$ARG4$' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
     }
 
 # Look at triggered alarms whose name matches the specified list of alarm name
