--- a/contrib/nagios/etc/nagios-plugins/config/vmware-alarms.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-alarms.cfg
@@ -216,28 +216,28 @@ define command{
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-entity-name '$ARG4$' --dc-name '$ARG5$' --trust-cert --log-level info
     }
 
-# Look at triggered alarms whose status matches the specified list of
-# triggered alarm status keywords (e.g., "yellow" or "warning"), within
-# specified datacenters. Evaluate any triggered alarms which have been
+# Look at triggered alarms associated with managed objects whose name matches
+# the specified list of substrings (e.g., "node1" or "node1.example.com"),
+# within specified datacenters. Evaluate any triggered alarms which have been
 # previously acknowledged, but not yet resolved.
 define command{
     command_name    check_vmware_alarms_specific_dc_include_entity_name_eval_acknowledged
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-entity-name '$ARG4$' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
     }
 
-# Look at triggered alarms whose status does not match the specified list of
-# triggered alarm status keywords (e.g., "yellow" or "warning"), within
-# specified datacenters. Do not evaluate any triggered alarms which have been
-# previously acknowledged.
+# Look at triggered alarms associated with managed objects whose name does not
+# match the specified list of substrings (e.g., "node1" or
+# "node1.example.com"), within specified datacenters. Do not evaluate any
+# triggered alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_specific_dc_exclude_entity_name
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-entity-name '$ARG4$' --dc-name '$ARG5$' --trust-cert --log-level info
     }
 
-# Look at triggered alarms whose status does not match the specified list of
-# triggered alarm status keywords (e.g., "yellow" or "warning"), within
-# specified datacenters. Evaluate any triggered alarms which have been
-# previously acknowledged, but not yet resolved.
+# Look at triggered alarms associated with managed objects whose name does not
+# match the specified list of substrings (e.g., "node1" or
+# "node1.example.com"), within specified datacenters. Evaluate any triggered
+# alarms which have been previously acknowledged, but not yet resolved.
 define command{
     command_name    check_vmware_alarms_specific_dc_exclude_entity_name_eval_acknowledged
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-entity-name '$ARG4$' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
