--- a/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
+++ b/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
@@ -381,11 +381,12 @@ define service{
     host_name               vc1.exmaple.com
     service_description     VMware Triggered Alarms - Exclude datastore usage
     servicegroups           vmware-checks, vmware-alarm-checks
-    check_command           check_vmware_alarms_specific_dc_exclude_names!example!vc1-read-only-service-account!$USER13$!"datastore usage on disk"
+    check_command           check_vmware_alarms_specific_dc_exclude_names!example!vc1-read-only-service-account!$USER13$!"example"!"datastore usage on disk"
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
-    # Argument 4: Comma-separated list of Triggered Alarm name substrings
+    # Argument 4: Comma-separated list of Datacenter names
+    # Argument 5: Comma-separated list of Triggered Alarm name substrings
     }
 
 define service{
@@ -393,11 +394,12 @@ define service{
     host_name               vc1.exmaple.com
     service_description     VMware Triggered Alarms - Datastore usage only
     servicegroups           vmware-checks, vmware-alarm-checks
-    check_command           check_vmware_alarms_specific_dc_include_names!example!vc1-read-only-service-account!$USER13$!"datastore usage on disk"
+    check_command           check_vmware_alarms_specific_dc_include_names!example!vc1-read-only-service-account!$USER13$!"example"!"datastore usage on disk"
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
-    # Argument 4: Comma-separated list of Triggered Alarm name substrings
+    # Argument 4: Datacenter name
+    # Argument 5: Comma-separated list of Triggered Alarm name substrings
     }
 
 define service{
@@ -405,11 +407,12 @@ define service{
     host_name               vc1.exmaple.com
     service_description     VMware Triggered Alarms - Server Support RP only
     servicegroups           vmware-checks, vmware-alarm-checks
-    check_command           check_vmware_alarms_specific_dc_include_entity_pools!example!vc1-read-only-service-account!$USER13$!"Server Support"
+    check_command           check_vmware_alarms_specific_dc_include_entity_pools!example!vc1-read-only-service-account!$USER13$!"example"!"Server Support"
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
-    # Argument 4: Comma-separated list of Triggered Alarm entity resource pool names
+    # Argument 4: Comma-separated list of Datacenter names
+    # Argument 5: Comma-separated list of Triggered Alarm entity resource pool names
     }
 
 define service{
@@ -417,11 +420,12 @@ define service{
     host_name               vc1.exmaple.com
     service_description     VMware Triggered Alarms - Exclude Development RP
     servicegroups           vmware-checks, vmware-alarm-checks
-    check_command           check_vmware_alarms_specific_dc_exclude_entity_pools!example!vc1-read-only-service-account!$USER13$!"Development"
+    check_command           check_vmware_alarms_specific_dc_exclude_entity_pools!example!vc1-read-only-service-account!$USER13$!"example"!"Development"
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
-    # Argument 4: Comma-separated list of Triggered Alarm entity resource pool names
+    # Argument 4: Comma-separated list of Datacenter names
+    # Argument 5: Comma-separated list of Triggered Alarm entity resource pool names
     }
 
 define service{
@@ -429,11 +433,12 @@ define service{
     host_name               vc1.exmaple.com
     service_description     VMware Triggered Alarms - ESXi hosts
     servicegroups           vmware-checks, vmware-alarm-checks
-    check_command           check_vmware_alarms_specific_dc_include_entity_name!example!vc1-read-only-service-account!$USER13$!"esx1", "esx2", "esx3"
+    check_command           check_vmware_alarms_specific_dc_include_entity_name!example!vc1-read-only-service-account!$USER13$!"example"!"esx1", "esx2", "esx3"
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
-    # Argument 4: Comma-separated list of Triggered Alarm entity name substrings
+    # Argument 4: Comma-separated list of Datacenter names
+    # Argument 5: Comma-separated list of Triggered Alarm entity name substrings
     }
 
 define service{
@@ -441,11 +446,12 @@ define service{
     host_name               vc1.exmaple.com
     service_description     VMware Triggered Alarms - Critical status
     servicegroups           vmware-checks, vmware-alarm-checks
-    check_command           check_vmware_alarms_specific_dc_include_status!example!vc1-read-only-service-account!$USER13$!"critical"
+    check_command           check_vmware_alarms_specific_dc_include_status!example!vc1-read-only-service-account!$USER13$!"example"!"critical"
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
-    # Argument 4: Comma-separated list of Triggered Alarm status keywords
+    # Argument 4: Comma-separated list of Datacenter names
+    # Argument 5: Comma-separated list of Triggered Alarm status keywords
     }
 
 define service{
@@ -453,11 +459,12 @@ define service{
     host_name               vc1.exmaple.com
     service_description     VMware Triggered Alarms - Exclude Warning status
     servicegroups           vmware-checks, vmware-alarm-checks
-    check_command           check_vmware_alarms_specific_dc_exclude_status!example!vc1-read-only-service-account!$USER13$!"warning"
+    check_command           check_vmware_alarms_specific_dc_exclude_status!example!vc1-read-only-service-account!$USER13$!"example"!"warning"
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
-    # Argument 4: Comma-separated list of Triggered Alarm status keywords
+    # Argument 4: Comma-separated list of Datacenter names
+    # Argument 5: Comma-separated list of Triggered Alarm status keywords
     }
 
 define service{
@@ -465,11 +472,12 @@ define service{
     host_name               vc1.exmaple.com
     service_description     VMware Triggered Alarms - Disk consolidation needed by alarm description
     servicegroups           vmware-checks, vmware-alarm-checks
-    check_command           check_vmware_alarms_specific_dc_include_desc!example!vc1-read-only-service-account!$USER13$!"Consolidation Needed status is set"
+    check_command           check_vmware_alarms_specific_dc_include_desc!example!vc1-read-only-service-account!$USER13$!"example"!"Consolidation Needed status is set"
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
-    # Argument 4: Comma-separated list of Triggered Alarm description substrings
+    # Argument 4: Comma-separated list of Datacenter names
+    # Argument 5: Comma-separated list of Triggered Alarm description substrings
     }
 
 define service{
@@ -477,11 +485,12 @@ define service{
     host_name               vc1.exmaple.com
     service_description     VMware Triggered Alarms - Exclude default CPU usage by alarm description
     servicegroups           vmware-checks, vmware-alarm-checks
-    check_command           check_vmware_alarms_specific_dc_exclude_desc!example!vc1-read-only-service-account!$USER13$!"Default alarm to monitor virtual machine CPU usage"
+    check_command           check_vmware_alarms_specific_dc_exclude_desc!example!vc1-read-only-service-account!$USER13$!"example"!"Default alarm to monitor virtual machine CPU usage"
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
-    # Argument 4: Comma-separated list of Triggered Alarm description substrings
+    # Argument 4: Comma-separated list of Datacenter names
+    # Argument 5: Comma-separated list of Triggered Alarm description substrings
     }
 
 define service{
@@ -489,11 +498,12 @@ define service{
     host_name               vc1.exmaple.com
     service_description     VMware Triggered Alarms - Virtual Machines
     servicegroups           vmware-checks, vmware-alarm-checks
-    check_command           check_vmware_alarms_specific_dc_include_entity_type!example!vc1-read-only-service-account!$USER13$!"VirtualMachine"
+    check_command           check_vmware_alarms_specific_dc_include_entity_type!example!vc1-read-only-service-account!$USER13$!"example"!"VirtualMachine"
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
-    # Argument 4: Comma-separated list of Triggered Alarm entity type keywords
+    # Argument 4: Comma-separated list of Datacenter names
+    # Argument 5: Comma-separated list of Triggered Alarm entity type keywords
     }
 
 define service{
@@ -501,9 +511,10 @@ define service{
     host_name               vc1.exmaple.com
     service_description     VMware Triggered Alarms - Exclude Datastores
     servicegroups           vmware-checks, vmware-alarm-checks
-    check_command           check_vmware_alarms_specific_dc_exclude_entity_type!example!vc1-read-only-service-account!$USER13$!"Datastore"
+    check_command           check_vmware_alarms_specific_dc_exclude_entity_type!example!vc1-read-only-service-account!$USER13$!"example"!"Datastore"
     # Argument 1: User Domain
     # Argument 2: Service Account username
     # Argument 3: Service Account password (see resource.cfg)
-    # Argument 4: Comma-separated list of Triggered Alarm entity type keywords
+    # Argument 4: Comma-separated list of Datacenter names
+    # Argument 5: Comma-separated list of Triggered Alarm entity type keywords
     }
