Add initial draft of datastore performance plugin
This plugin monitors a specified datastore for performance metrics
which exceed latency thresholds.

This plugin accepts flags to:

- specify individual latency metric thresholds (e.g., read latency
  CRITICAL, read latency WARNING, write latency ...)
- specify percentile *sets*
  - multiple sets supported, each composed of a percentile and pairs
    of CRITICAL and WARNING threshold values

If not explicitly provided, default values are used.

Performance Data metrics are provided for each supported percentile:

- `90`
- `80`
- `70`
- `60`
- `50`

Performance Data metrics are omitted for a percentile when all
metrics in the percentile set are of value 0.

This plugin evaluates the active interval, but provides historical
interval metrics via `LongServiceOutput` unless explicitly requested
via a flag not to emit those details.

This plugin attempts to identify whether performance metrics
collection is not enabled for a datastore. If identified, an
`UNKNOWN` state is returned by the plugin as (reliable) evaluation
of a datastore's performance is not possible.

Doc updates have been applied, example usage has been added, including
a command definition "contrib" file illustrating how the plugin would
be referenced within a production Nagios configuration.

- refs GH-316
- refs GH-505

--- a/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
+++ b/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
@@ -518,3 +518,48 @@ define service{
     # Argument 4: Comma-separated list of Datacenter names
     # Argument 5: Comma-separated list of Triggered Alarm entity type keywords
     }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Datastore Performance - HUSVM-DC1-vol6
+    servicegroups           vmware-checks, vmware-datastore-checks
+    check_command           check_vmware_datastore_performance_via_individual_flags!example!vc1-read-only-service-account!$USER13$!15!30!15!30!15!30!HUSVM-DC1-vol6
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Warning read latency threshold given as a whole number or as a floating-point number
+    # Argument 5: Critical read latency threshold given as a whole number or as a floating-point number
+    # Argument 6: Warning write latency threshold given as a whole number or as a floating-point number
+    # Argument 7: Critical write latency threshold given as a whole number or as a floating-point number
+    # Argument 8: Warning vm latency threshold given as a whole number or as a floating-point number
+    # Argument 9: Critical vm latency threshold given as a whole number or as a floating-point number
+    # Argument 10: Datastore name as seen within vSphere client
+    }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Datastore Performance - HUSVM-DC1-vol7
+    servicegroups           vmware-checks, vmware-datastore-checks
+    check_command           check_vmware_datastore_performance_via_1percentile_set!example!vc1-read-only-service-account!$USER13$!90,15,30,15,30,15,30!HUSVM-DC1-vol7
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Percentile set (P,RLW,RLC,WLW,WLC,VMLW,VMLC) given as a whole number or as a floating-point number
+    # Argument 5: Datastore name as seen within vSphere client
+    }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Datastore Performance - HUSVM-DC1-DigColl-vol8
+    servicegroups           vmware-checks, vmware-datastore-checks
+    check_command           check_vmware_datastore_performance_via_2percentile_sets!example!vc1-read-only-service-account!$USER13$!90,15,30,15,30,15,30!50,15,30,15,30,15,30!HUSVM-DC1-DigColl-vol8
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: First percentile set (P,RLW,RLC,WLW,WLC,VMLW,VMLC) given as a whole number or as a floating-point number
+    # Argument 5: Second percentile set (P,RLW,RLC,WLW,WLC,VMLW,VMLC) given as a whole number or as a floating-point number
+    # Argument 6: Datastore name as seen within vSphere client
+    }
