--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ scratch/
 /check_vmware_vhw
 /check_vmware_hs2ds2vms
 /check_vmware_datastore
+/check_vmware_datastore_performance
 /check_vmware_snapshots_age
 /check_vmware_snapshots_count
 /check_vmware_snapshots_size
